opentreemap/treemap/css/sass/partials/_footer.scss
// Partial: Footer

footer {
    border-top: 1px solid $well-color;
    position: fixed;
    background: #FFF;
    width: 100%;
    bottom: 0;

    &:empty {
        display: none;
    }

    .footer-inner {
        padding: 9px 15px 10px;
        height: 20px;
    }

    a {
        color: $subtext-color;
        font-weight: 700;
        font-size: 1.2rem;

        &:hover {
            color: $main-text-color;
            text-decoration: none;
        }
    }
}

